--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -65,6 +65,10 @@ tbody {
             gap: 3rem;
             align-items: center;
 
+            @media (max-width: 768px) {
+                gap: 1rem;
+            }
+
             h2 {
                 font-size: 2.3rem;
             }
