--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -1,42 +1,3 @@
-/* .card {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 3rem;
-    padding: 2rem 0;
-    background-color: #ced0d371;
-    border-bottom: 3px solid #ffffff;
-    width: 90vw;
-    margin: 0 auto;
-
-    &:hover { 
-        background-color: #ced0d3c0;
-        cursor: pointer;
-    }
-
-    img {
-        height: 5rem;
-        width: auto;
-    }
-
-    .item-info {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 4rem;
-
-        .symbol {
-            text-transform: uppercase;
-        }
-    }
-
-    p {
-        font-weight: bold;
-        font-size: 2rem;
-    }
-} */
-
-
 tbody {
     tr {
         background-color: #ced0d371;
@@ -56,6 +17,7 @@ tbody {
             padding: .8rem;
             font-size: 2rem;
             font-weight: bold;
+            color: #000000;
         }
 
         .coin {
@@ -87,4 +49,8 @@ tbody {
             font-size: 2.5rem;
         }
     }
+}
+
+.item-link {
+    text-decoration: none;
 }
