--- a/src/components/ItemDetail/ItemDetail.scss
+++ b/src/components/ItemDetail/ItemDetail.scss
@@ -6,6 +6,15 @@
     display: flex;
     justify-content: space-between;
 
+    @media (max-width: 768px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 5rem;
+        padding: 2rem;
+        margin: 3rem 0;
+    }
+
     .detail-left {
         display: flex;
         flex-direction: column;
@@ -14,6 +23,7 @@
         .left-main-info {
             display: flex;
             align-items: center;
+            flex-wrap: wrap;
             gap: 2rem;
             font-weight: bold;
 
@@ -40,6 +50,10 @@
         }
 
         .left-other-info {
+            @media (max-width: 768px) {
+                text-align: left;
+            }
+
             h4 {
                 color: #ffffff;
                 font-size: 2.5rem;
@@ -57,6 +71,10 @@
         display: flex;
         flex-direction: column;
         gap: 4rem;
+
+        @media (max-width: 768px) {
+            min-width: 32rem;
+        }
 
         .right-main-info {
             display: flex;
@@ -81,6 +99,10 @@
         }
 
         .right-other-info{
+            @media (max-width: 768px) {
+                text-align: left;
+            }
+
             h4 {
                 color: #ffffff;
                 font-size: 2.5rem;
