--- a/src/components/ItemList/ItemList.scss
+++ b/src/components/ItemList/ItemList.scss
@@ -3,6 +3,10 @@ table {
     width: 90vw;
     min-height: 60vh;
     margin: 0 auto 5rem auto;
+
+    @media (max-width: 768px) {
+        width: 100vw;
+    }
 }
 thead {
     tr {
