--- a/src/components/ItemDetail/ItemDetail.scss
+++ b/src/components/ItemDetail/ItemDetail.scss
@@ -1,15 +1,17 @@
 .detail {
-    background-color: #ffffff67;
     border-radius: 1rem;
     min-width: 90vw;
     padding: 2rem 8rem;
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
+    border: 2px solid #000000;
+    margin: 5rem 0;
 
     @media (max-width: 768px) {
         flex-direction: column;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         gap: 5rem;
         padding: 2rem;
         margin: 3rem 0;
@@ -26,21 +28,22 @@
             flex-wrap: wrap;
             gap: 2rem;
             font-weight: bold;
-
-            h1 {
-                color: #ffff00;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            }
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            text-transform: uppercase;
+            margin-bottom: 2rem;
 
             h2 {
-                font-size: 2.5rem;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                color: #a1a1a1;
+                font-size: 2rem;
+            }
+            
+            h1 {
+                font-size: 3.5rem;
             }
 
-            h3 {
-                font-size: 2rem;
-                margin-top: 1rem;
-                text-transform: uppercase;
+            .rank {
+                font-size: 3rem;
+                color: #000000;
             }
 
             img {
@@ -50,12 +53,18 @@
         }
 
         .left-other-info {
+            padding-bottom: 1rem;
+            border-bottom: 2px solid #e1e1e1;
+
+            &:last-child {
+                border: none;
+            }
+
             @media (max-width: 768px) {
                 text-align: left;
             }
 
             h4 {
-                color: #ffffff;
                 font-size: 2.5rem;
             }
 
@@ -63,6 +72,7 @@
                 font-size: 2.3rem;
                 font-weight: 700;
                 padding-top: 1rem;
+                color: #000000;
             }
         }
     }
@@ -78,33 +88,48 @@
 
         .right-main-info {
             display: flex;
-            align-items: center;
+            flex-direction: column;
             justify-content: center;
-            gap: 2rem;
+            gap: 1rem;
 
             h2 {
-                color: #ffffff;
                 font-size: 2.5rem;
                 text-transform: uppercase;
+                font-weight: bold;
             }
 
-            .prices p {
+            .prices {
+                display: flex;
+                align-items: center;
+                gap: 1rem;
+
+                select {
+                    padding: .5rem 4rem .5rem 0;
+                    font-size: 2rem;
+                    font-weight: bold;
+                    border: 2px solid #000000;
+                }
+            }
+
+            .price {
                 font-size: 3rem;
                 font-weight: bold;
-
-                &:last-child {
-                    border-top: 2px solid #ffffff;
-                }
             }
         }
 
         .right-other-info{
+            padding-bottom: 1rem;
+            border-bottom: 2px solid #e1e1e1;
+
+            &:last-child {
+                border: none;
+            }
+
             @media (max-width: 768px) {
                 text-align: left;
             }
 
             h4 {
-                color: #ffffff;
                 font-size: 2.5rem;
             }
 
