--- a/src/components/ItemListContainer/ItemListContainer.scss
+++ b/src/components/ItemListContainer/ItemListContainer.scss
@@ -8,4 +8,15 @@
     border: 2px solid #000000;
     padding: 1rem 0;
     font-weight: bold;
+
+    &::placeholder {
+        color: #8484846d;
+    }
+}
+.not-found {
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 5rem;
 }
