--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -33,7 +33,7 @@
     }
 
     button {
-        padding: 1rem 3rem;
+        padding: 1rem 4rem;
         border-radius: 1rem;
         background-color: #000000;
         color: #ffff00;
@@ -41,7 +41,7 @@
         font-weight: bold;
         text-transform: uppercase;
         cursor: pointer;
-        border: 2px solid #ffffff;
+        border: 2px solid #ffff00;
 
         &:hover {
             background-color: #ffff00;
